# api/views.py
@@ -4,11 +4,14 @@ from rest_framework import generics
 from django.shortcuts import render
 from .serializers import PassengerSerializers, PassengerTripSerializers
 from primary.models import Passenger, PassengerTrip
+from primary.tasks import send_email_task
 
 
 class PassengerView(generics.ListCreateAPIView):
     queryset = Passenger.objects.all()
     serializer_class = PassengerSerializers
+    def send_email(self):
+        send_email_task(self.PassengerTrip.PassengerID.Name, self.Passenger.Trip.PassengerID.Email, self.Distance, (self.DestinationLatitude, self.DestinationLongitude))
 
 
 class PassengerSingleView(generics.RetrieveUpdateDestroyAPIView):
@@ -20,6 +23,9 @@ class PassengerSingleView(generics.RetrieveUpdateDestroyAPIView):
 class TripView(generics.ListCreateAPIView):
     queryset = PassengerTrip.objects.all()
     serializer_class = PassengerTripSerializers
+
+    def send_email(self):
+        return send_email_task(self.PassengerTrip.PassengerID.Name, self.Passenger.Trip.PassengerID.Email, self.Distance, (self.DestinationLatitude, self.DestinationLongitude))
 
 
 class TripSingleView(generics.RetrieveUpdateDestroyAPIView):
